add container scss

--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
         />
         <link
             rel="stylesheet"
-            href="vendor/bootstrap-table/css/bootstrap-table.min.css"
+            href=!"vendor/bootstrap-table/css/bootstrap-table.min.css"
         /> -->
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
     <body>
-        <div class="app home"></div>
+        <div class="app home">
+            <div class="box prefix">
+               <div class="box-children">
+                   <p class="hello">hello</p>
+               </div>
+            </div>
+        </div>
 
         <!-- Link javascript -->
         <!-- <script src="vendor/_jquery.min.js"></script>
