--- a/index.html
+++ b/index.html
@@ -21,11 +21,29 @@
     </head>
     <body>
         <div class="app home">
-            <div class="box prefix">
-               <div class="box-children">
-                   <p class="hello">hello</p>
-               </div>
-            </div>
+            <header>
+                <div class="container">
+                    <div class="logo">
+                        <a href="#">
+                            <img src="/assets/img/logo.png" alt="logo" />
+                        </a>
+                    </div>
+                    <ul class="menu">
+                        <li class="menu__item">
+                            <a href="#">Landing</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#">Pages</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#">Contact</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </header>
         </div>
 
         <!-- Link javascript -->
