--- a/index.html
+++ b/index.html
@@ -24,26 +24,59 @@
             <header>
                 <div class="container">
                     <div class="logo">
-                        <a href="#">
+                        <a href="#" class="logo__contain">
                             <img src="/assets/img/logo.png" alt="logo" />
                         </a>
                     </div>
                     <ul class="menu">
                         <li class="menu__item">
-                            <a href="#">Landing</a>
+                            <a href="#" class="menu__item-text">Landing</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#">Pages</a>
+                            <a href="#" class="menu__item-text">Pages</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#">Contact</a>
+                            <a href="#" class="menu__item-text">Contact</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#">About</a>
+                            <a href="#" class="menu__item-text">About</a>
                         </li>
                     </ul>
+                    <div class="auth">
+                        <a href="#" class="auth__btn">Login</a>
+                        <a href="#" class="auth__btn --register">Register</a>
+                    </div>
+                    <div class="btn-menu">
+                        <span></span>
+                    </div>
                 </div>
             </header>
+
+            <section class="feature">
+                <div class="container">
+                    <div class="title">
+                        <h2 class="title__text">New Features</h2>
+                        <p class="title__desc">
+                            We have release some new features in the Veshion.
+                            Check it out now guys
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="veshion">
+                <div class="container">
+                    <div class="title">
+                        <h2 class="title__text">
+                            Find your new style with <br> <span class="active-text">Veshion</span>
+                        </h2>
+                        <p class="title__desc">
+                            Veshion always updates the latest fashion trends.
+                            Make sure you are already using this application
+                        </p>
+                    </div>
+                </div>
+            </section>
         </div>
 
         <!-- Link javascript -->
